<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/img_poster"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/lorem"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_view_details"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/view_details"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>